--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,13 @@ node_modules/
 *.egg-info/
 .ipynb_checkpoints
 *.tsbuildinfo
-a-jupyterlab-session/labextension
+a_jupyterlab_session/labextension
 # Version file is handled by hatchling
-a-jupyterlab-session/_version.py
+a_jupyterlab_session/_version.py
+
+# Integration tests
+ui-tests/test-results/
+ui-tests/playwright-report/
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
