--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: extension-artifacts
-        path: dist/a-jupyterlab-session*
+        path: dist/a_jupyterlab_session*
         if-no-files-found: error
 
   test_isolated:
@@ -75,7 +75,7 @@ jobs:
         sudo rm -rf $(which node)
         sudo rm -rf $(which node)
 
-        pip install "jupyterlab>=4.0.0,<5" a-jupyterlab-session*.whl
+        pip install "jupyterlab>=4.0.0,<5" a_jupyterlab_session*.whl
 
 
         jupyter labextension list
@@ -108,7 +108,7 @@ jobs:
     - name: Install the extension
       run: |
         set -eux
-        python -m pip install "jupyterlab>=4.0.0,<5" a-jupyterlab-session*.whl
+        python -m pip install "jupyterlab>=4.0.0,<5" a_jupyterlab_session*.whl
 
     - name: Install dependencies
       working-directory: ui-tests
