--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
         "@jupyterlab/coreutils": "^6.0.0",
+        "@jupyterlab/filebrowser": "^4.0.0",
         "@jupyterlab/services": "^7.0.0",
         "uuid": "^11.0.0"
     },
