--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "keywords": [
         "jupyter",
         "jupyterlab",
-        "jupyterlab-extension"
+        "jupyterlite",
+        "jupyterlite-extension"
     ],
     "homepage": "https://github.com/juntyr/a-jupyterlab-session",
     "bugs": {
@@ -57,8 +58,8 @@
     "dependencies": {
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/services": "^7.0.0",
-        "@jupyterlite/contents": "^0.4.3",
-        "@jupyterlite/server": "^0.4.3",
+        "@jupyterlite/contents": "^0.4.2",
+        "@jupyterlite/server": "^0.4.2",
         "uuid": "^11.0.0"
     },
     "devDependencies": {
