--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "@jupyterlab/coreutils": "^6.0.0",
         "@jupyterlab/services": "~7.4.0-beta.1",
         "@jupyterlite/contents": "^0.6.0-alpha.4",
-        "@jupyterlite/services-extension": "^0.6.0-alpha.4",
+        "@lumino/coreutils": "^2.2.0",
         "uuid": "^11.0.0"
     },
     "devDependencies": {
